# UDP_Receiver_Sender

./: ButtonBar.qml  CMakeLists.txt  ComInterface.qml  InternalOp.h  Main.qml  NavigationBar.qml  PopupWindow.qml  PopupWindows.qml  Sc1010_Main.qml  Sc2030_ComMon.qml  TouchButton.qml  comDataTableModel.h  comUdpData.h  dataSetUI.h  main.cpp  qml.qrc  socketudp.cpp  socketudp.h  udpReceive.dbc  udpReceive.ini  udpSend.ini
